fix html, fix title position, fix margin to gap

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
     width: 100vw;
+    background-color: black;
     margin: 0;
-    background-color: $color-section-background;
 }
