--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,11 +1,12 @@
 .container {
     height: 70%;
-    width: 70%;
+    width: 50%;
     margin: 0 auto;
     background-color: $color-section-background;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 5px;
     grid-template-areas: 
     "five one one one three three"
     "six one one one four four"
@@ -16,72 +17,58 @@
 
         &--1 {
             grid-area: one;
-            margin: 10px;
         } 
     
         &--2 {
             grid-area: two;
-            margin: 10px;
         }
 
         &--3 {
             grid-area: three;
-            margin: 10px;
         }
 
         &--4 {
             grid-area: four;
-            margin: 10px;
         }
 
         &--5 {
             grid-area: five;
-            margin: 10px;
         }
 
         &--6 {
             grid-area: six;
-            margin: 10px;
         }
 
         &--7 {
             grid-area: seven;
-            margin: 10px;
         }
 
         &--8 {
             grid-area: eight;
-            margin: 10px;
         }
 
         &--9 {
             grid-area: nine;
-            margin: 10px;
         }
 
         &--10 {
             grid-area: ten;
-            margin: 10px;
         }
 
         &--11 {
             grid-area: eleven;
-            margin: 10px;
         }
 
         &--12 {
             grid-area: twelve;
-            margin: 10px;
         }
 
         &--13 {
             grid-area: thirteen;
-            margin: 10px;
         }
 
         &--14 {
             grid-area: fourteen;
-            margin: 10px;
         }
     }
 }
